--- a/404.html
+++ b/404.html
@@ -5,9 +5,6 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
-  <br/>
-
-  <img src="{{ site.baseurl }}/img/404-southpark.jpg" />
+  <h1>Sorry, this page doesn't exist.</h1>
+  Would you like to go back to the <a href="{{ site.baseurl }}/">homepage</a>?
 </div>
